--- a/.github/workflows/build-docker.yml
+++ b/.github/workflows/build-docker.yml
@@ -19,35 +19,66 @@ on:
 env:
   REGISTRY: ghcr.io
   IMAGE_NAME: ${{ github.repository }}
+  IMAGE_TAG: ${{ github.ref_name == 'master' && 'latest' || github.ref_name }}
   
 jobs:
   docker-build:
     runs-on: ubuntu-20.04
     steps:
+    - name: install new fuse-overlayfs
+      run: |
+        sudo dpkg-divert --local --rename /usr/bin/fuse-overlayfs && \
+          curl -L https://github.com/containers/fuse-overlayfs/releases/download/v1.12/fuse-overlayfs-x86_64 -o /tmp/fuse-overlayfs && \
+          sudo mv /tmp/fuse-overlayfs /usr/local/bin && \
+          sudo chmod a+x /usr/local/bin/fuse-overlayfs
     - name: Checkout source
       uses: actions/checkout@v2
     # https://github.com/docker/setup-qemu-action
     - name: Set up QEMU
       uses: docker/setup-qemu-action@v1
-    # https://github.com/docker/setup-buildx-action
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v1     
-#    - name: Build with docker
-#      run: docker build --tag ${{ env.REGISTRY }}/${{ github.repository }} .
+
+    - name: Build all with buildah
+      run: |
+        mkdir -p client-out &&
+          buildah --version && \
+          make OPTSFILE=gha
+
     - name: Log in to the Container registry
-      uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
+      uses: redhat-actions/podman-login@v1
       with:
         registry: ${{ env.REGISTRY }}
         username: ${{ github.actor }}
         password: ${{ secrets.GITHUB_TOKEN }}
-    - name: Build and Publish on docker hub
-      run: |
-        docker buildx build --push \
-          --build-arg tag=${{ inputs.tag }} \
-          --tag ${{ env.REGISTRY }}/${{ github.repository }}:${{ inputs.tag }}\
-          --platform linux/arm64 . 
-#    - name: Publish image
-#      run: docker push ${{ env.REGISTRY }}/${{ github.repository }}
+
+    - name: Publish image
+      run: podman push as-docker:latest ${{ env.REGISTRY }}/srd424/audioserve-docker:${{ env.IMAGE_TAG }}
+
+#    # https://github.com/docker/setup-buildx-action
+#    - name: Set up Docker Buildx
+#      uses: docker/setup-buildx-action@v1     
+##    - name: Build with docker
+##      run: docker build --tag ${{ env.REGISTRY }}/${{ github.repository }} .
+#    - name: Log in to the Container registry
+#      uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
+#      with:
+#        registry: ${{ env.REGISTRY }}
+#        username: ${{ github.actor }}
+#        password: ${{ secrets.GITHUB_TOKEN }}
+#    - name: Build web client
+#      run: |
+#        mkdir client-out && \
+#        docker buildx build \
+#          -v $PWD/client-out:/client-out \
+#          --platform linux/arm64 -f Dockerfile.client
+#    - name: Build final image and publish
+#      run: |
+#        docker buildx build --push \
+#          --build-arg tag=${{ inputs.tag }} \
+#          --tag ${{ env.REGISTRY }}/${{ github.repository }}:${{ inputs.tag }} \
+#          -v $PWD/client-out:/audioserve_client \
+#          --platform linux/arm64 -f Dockerfile
+##    - name: Publish image
+##      run: docker push ${{ env.REGISTRY }}/${{ github.repository }}
 
 
 # vim: set ts=2 et:
