--- a/.github/workflows/build-docker.yml
+++ b/.github/workflows/build-docker.yml
@@ -41,7 +41,7 @@ jobs:
       run: |
         mkdir -p client-out &&
           buildah --version && \
-          make OPTSFILE=gha
+          make OPTSFILE=gha TAG=${{ inputs.tag }}
 
     - name: Log in to the Container registry
       uses: redhat-actions/podman-login@v1
@@ -57,33 +57,4 @@ jobs:
       if: ${{ startsWith(inputs.tag,"v") }}
       run: podman push as-docker:latest ${{ env.REGISTRY }}/srd424/audioserve-docker:${{ inputs.tag }}
   
-
-#    # https://github.com/docker/setup-buildx-action
-#    - name: Set up Docker Buildx
-#      uses: docker/setup-buildx-action@v1     
-##    - name: Build with docker
-##      run: docker build --tag ${{ env.REGISTRY }}/${{ github.repository }} .
-#    - name: Log in to the Container registry
-#      uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
-#      with:
-#        registry: ${{ env.REGISTRY }}
-#        username: ${{ github.actor }}
-#        password: ${{ secrets.GITHUB_TOKEN }}
-#    - name: Build web client
-#      run: |
-#        mkdir client-out && \
-#        docker buildx build \
-#          -v $PWD/client-out:/client-out \
-#          --platform linux/arm64 -f Dockerfile.client
-#    - name: Build final image and publish
-#      run: |
-#        docker buildx build --push \
-#          --build-arg tag=${{ inputs.tag }} \
-#          --tag ${{ env.REGISTRY }}/${{ github.repository }}:${{ inputs.tag }} \
-#          -v $PWD/client-out:/audioserve_client \
-#          --platform linux/arm64 -f Dockerfile
-##    - name: Publish image
-##      run: docker push ${{ env.REGISTRY }}/${{ github.repository }}
-
-
 # vim: set ts=2 et:
